fix product card spacing

--- a/assets/app.css
+++ b/assets/app.css
@@ -769,6 +769,18 @@ video {
   margin-bottom: 80px;
 }
 
+.mb-7 {
+  margin-bottom: 1.75rem;
+}
+
+.mb-large {
+  margin-bottom: 24px;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
 .block {
   display: block;
 }
@@ -1592,8 +1604,30 @@ video {
     margin-top: 80px;
   }
 
+  .tabletUp\:mb-large {
+    margin-bottom: 24px;
+  }
+
   .tabletUp\:h-huge {
     height: 48px;
+  }
+
+  .tabletUp\:gap-small {
+    gap: 8px;
+  }
+
+  .tabletUp\:text-body-sm {
+    font-size: 16px;
+    line-height: normal;
+    font-weight: 400;
+  }
+
+  .tabletUp\:leading-normal {
+    line-height: 1.5;
+  }
+
+  .tabletUp\:leading-5 {
+    line-height: 1.25rem;
   }
 }
 
@@ -1616,6 +1650,14 @@ video {
 }
 
 @media (min-width: 800px) {
+  .desktopUp\:mb-7 {
+    margin-bottom: 1.75rem;
+  }
+
+  .desktopUp\:mb-large {
+    margin-bottom: 24px;
+  }
+
   .desktopUp\:flex {
     display: flex;
   }
@@ -1648,9 +1690,23 @@ video {
     flex-basis: 59.26%;
   }
 
+  .desktopUp\:gap-small {
+    gap: 8px;
+  }
+
   .desktopUp\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .desktopUp\:text-body-sm {
+    font-size: 16px;
+    line-height: normal;
+    font-weight: 400;
+  }
+
+  .desktopUp\:leading-5 {
+    line-height: 1.25rem;
   }
 }
 
